--- a/filler/Cargo.toml
+++ b/filler/Cargo.toml
@@ -16,7 +16,8 @@ futures-util = "0.3.30"
 thiserror = "1.0.62"
 anyhow = "1.0.88"
 fuels = { version = "0.66.4", features = ["fuel-core-lib"] }
-spark-market-sdk = { version = "0.3.1" }
+# spark-market-sdk = { version = "0.3.1" }
+spark-market-sdk = { git = "https://github.com/vecheslav/orderbook-contract.git", branch = "fix-with-account" }
 chrono = "0.4.38"
 env_logger = "0.11.5"
 reqwest = { version = "0.12.7", features = ["blocking", "json"] }
