--- a/filler-cli/Cargo.toml
+++ b/filler-cli/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 clap = { version = "4.5.4", features = ["derive"] }
 tokio = { version = "1.40.0", features = ["rt", "macros"] }
 fuels = { version = "0.66.5", features = ["fuel-core-lib"] }
-spark-market-sdk = { version = "0.3.1" }
+spark-market-sdk = { git = "https://github.com/compolabs/orderbook-contract.git", branch = "release-0.5.0" }
 multiasset_sdk = { git = "https://github.com/compolabs/multiasset-contract.git" }
 anyhow = "1.0.88"
 dotenv = "0.15.0"
